# utl-template

./: .gitignore  .hadolint.yaml  .markdownlint-cli2.yaml  AGENTS.md  Brewfile  Makefile  README.md  Taskfile.yml  pre-commit.yaml
.codex/: hooks.json
.codex/hooks/: README.md  post-tool-check.sh  pre-commit-check.sh
.github/: dependabot.yml
.github/workflows/: ci.yml  ci.yml.disabled
backend/: .env.example  alembic.ini  importlinter.ini  pyproject.toml
backend/src/: config.py  log_config.py  main.py
backend/src/adapters/: __init__.py
backend/src/adapters/db/: __init__.py  session.py  sqlalchemy_models.py
backend/src/adapters/db/migrations/: README.md  env.py  script.py.mako
backend/src/api/: dependencies.py  schemas.py
backend/src/api/routers/: health.py
backend/src/core/: __init__.py
backend/src/core/application/: __init__.py  dto.py  result.py
backend/src/core/application/ports/: __init__.py  health_query.py
backend/src/core/application/usecases/: get_health.py
backend/src/core/domain/: __init__.py  entities.py  exceptions.py  value_objects.py
backend/tests/unit/: test_health.py
docker/: backend.Dockerfile  compose.yaml  frontend.Dockerfile
docs/: README.md  architecture.md  development.md  env.md  openapi.json  operations.md  overview.md  testing.md
docs/adr/: 0001-initial-template.md
docs/guides/: development.md  operations.md  testing.md
frontend/: biome.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json
frontend/src/: main.tsx
frontend/src/api/: health.ts
frontend/src/config/: knip.json  playwright.config.ts  vite.config.ts
frontend/src/e2e/: app.e2e.ts
frontend/src/test/: App.test.tsx  health.test.ts
frontend/src/ui/: App.tsx  styles.css
infra/: README.md
infra/docker/: backend.Dockerfile  frontend.Dockerfile
infra/local/: compose.yaml
infra/terraform/: README.md  main.tf  outputs.tf  variables.tf
infra/terraform/environments/: local.tfvars.example
ops/: README.md
ops/precommit/: config.yaml
scripts/: check_changed.py  check_dependabot.py  check_github_actions.sh  check_openapi.py  export_openapi.py  install_tools.sh
