[project]
name = "utl-template-backend"
version = "0.1.0"
description = "独立したコアレイヤを持つ FastAPI バックエンドテンプレート。"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "import-linter>=2.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.4",
  "ty>=0.0.1a6",
  "xenon>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]
markers = [
  "unit: isolated tests without external services",
  "e2e: end-to-end tests that may require services",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PLR", "RUF", "C90"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004"]
