[project]
name = "utl-template-backend"
version = "0.1.0"
description = "独立したコアレイヤを持つ FastAPI バックエンドテンプレート。"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.2.0",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.32.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "import-linter>=2.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.7.4",
  "ty>=0.0.1a6",
  "xenon>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]
markers = [
  "unit: isolated tests without external services",
  "e2e: end-to-end tests that may require services",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "PLR", "RUF", "C90", "S"]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 60
ignore_names = [
  "Base",
  "Result",
  "ServiceName",
  "SessionFactory",
  "app_env",
  "create",
  "error",
  "get_health",
  "jwt_secret",
  "model_config",
]

[tool.deptry]
known_first_party = ["src"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "httpx",
  "import-linter",
  "pre-commit",
  "psycopg",
  "pytest",
  "pytest-cov",
  "ruff",
  "ty",
  "uvicorn",
  "xenon",
]

[tool.uv]
dev-dependencies = [
    "deptry>=0.25.1",
    "pip-audit>=2.10.0",
    "pyyaml>=6.0.3",
    "vulture>=2.16",
]
