[project]
name = "utl-template-backend"
version = "0.1.0"
description = "独立したコアレイヤを持つ FastAPI バックエンドテンプレート。"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.18.4",
  "fastapi>=0.115.0",
  "psycopg[binary]>=3.3.4",
  "pydantic>=2.13.4",
  "pydantic-settings>=2.6.0",
  "sqlalchemy>=2.0.36",
  "structlog>=24.4.0",
  "uvicorn[standard]>=0.47.0",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27.2",
  "import-linter>=2.1",
  "pre-commit>=4.0.1",
  "pytest>=8.3.3",
  "pytest-cov>=5.0.0",
  "ruff>=0.15.13",
  "ty>=0.0.37",
  "xenon>=0.9.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
addopts = [
  "--cov=src",
  "--cov-report=term-missing",
  "--cov-fail-under=90",
]
markers = [
  "unit: isolated tests without external services",
  "e2e: end-to-end tests that may require services",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "COM812", # 末尾カンマの追加は Ruff formatter に任せるため。
  "COM819", # 禁止される末尾カンマの削除は Ruff formatter に任せるため。
  "D203",   # pydocstyle の規約衝突回避。D211 を採用するため。
  "D206",   # docstring のインデント整形は Ruff formatter に任せるため。
  "D213",   # pydocstyle の規約衝突回避。D212 を採用するため。
  "D300",   # docstring の quote style は Ruff formatter に任せるため。
  "E111",   # インデント幅の整形は Ruff formatter に任せるため。
  "E114",   # コメントのインデント幅の整形は Ruff formatter に任せるため。
  "E117",   # 過剰インデントの整形は Ruff formatter に任せるため。
  "ISC002", # 複数行の暗黙的文字列結合の整形は Ruff formatter に任せるため。
  "Q000",   # インライン文字列の quote style は Ruff formatter に任せるため。
  "Q001",   # 複数行文字列の quote style は Ruff formatter に任せるため。
  "Q002",   # docstring の quote style は Ruff formatter に任せるため。
  "Q003",   # 不要な quote escape の整理は Ruff formatter に任せるため。
  "Q004",   # 不要な quote escape の削除は Ruff formatter に任せるため。
  "W191",   # タブインデントの整形は Ruff formatter に任せるため。
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["PLR2004", "S101"]

[tool.vulture]
paths = ["src", "tests"]
min_confidence = 60
ignore_names = [
  "Base",
  "Result",
  "ServiceName",
  "SessionFactory",
  "app_env",
  "create",
  "error",
  "get_health",
  "jwt_secret",
  "model_config",
]

[tool.deptry]
known_first_party = ["src"]

[tool.deptry.per_rule_ignores]
DEP002 = [
  "httpx",
  "import-linter",
  "pre-commit",
  "psycopg",
  "pytest",
  "pytest-cov",
  "ruff",
  "ty",
  "uvicorn",
  "xenon",
]

[tool.uv]
dev-dependencies = [
    "deptry>=0.25.1",
    "pip-audit>=2.10.0",
    "pyyaml>=6.0.3",
    "vulture>=2.16",
]
